<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="menu">
        <item>Riepilogo annuale</item>
        <item>Gestione anni</item>
        <item>Gestione corsi</item>
        <item>Gestione voti</item>
    </string-array>
    <string-array name="mesi">
        <item>Gennaio</item>
        <item>Febbraio</item>
        <item>Marzo</item>
        <item>Aprile</item>
        <item>Maggio</item>
        <item>Giugno</item>
        <item>Luglio</item>
        <item>Agosto</item>
        <item>Settembre</item>
        <item>Ottobre</item>
        <item>Novembre</item>
        <item>Dicembre</item>
    </string-array>

    <string name="app_name">Student\'s grades</string>

    <string name="dialog_tit_avviso">AVVISO</string>
    <string name="dialog_tit_ca">Seleziona l\'anno scolastico da creare</string>
    <string name="dialog_tit_ma">Seleziona l\'anno scolastico da modificare</string>
    <string name="dialog_tit_ma2">Seleziona il nuovo valore per l\'anno scolastico da modificare</string>
    <string name="dialog_tit_sa">Modifica dell\' anno scolastico:</string>
    <string name="dialog_tit_ea">Seleziona l\'anno scolastico da eliminare</string>
    <string name="dialog_tit_cc">Seleziona l\'anno scolastico del corso</string>
    <string name="dialog_tit_cc2">Inserisci il nome del corso</string>
    <string name="dialog_tit_mc">Seleziona il corso da modificare</string>
    <string name="dialog_tit_mc2">Modifica il nome del corso</string>
    <string name="dialog_tit_ec">Seleziona l\'anno scolastico del corso da eliminare</string>
    <string name="dialog_tit_ec2">Seleziona il corso da eliminare</string>
    <string name="dialog_tit_cv">Seleziona la data del voto</string>
    <string name="dialog_tit_cv2">Seleziona il punteggio del voto</string>
    <string name="dialog_tit_cv3">Seleziona il corso del voto</string>
    <string name="dialog_tit_mv">Seleziona il voto del corso</string>
    <string name="dialog_tit_mv2">Modifica la data del voto selezionato</string>
    <string name="dialog_tit_mv3">Modifica il punteggio del voto selezionato</string>
    <string name="dialog_tit_menu_sa">Seleziona l\'anno scolastico</string>
    <string name="dialog_btn_salva">Salva</string>
    <string name="dialog_btn_seleziona">Seleziona</string>
    <string name="dialog_btn_modifica">Modifica</string>
    <string name="dialog_btn_rimuovi">Rimuovi</string>
    <string name="dialog_btn_annulla">Annulla</string>
    <string name="dialog_btn_inserisci">Inserisci</string>
    <string name="dialog_btn_ok">Ok</string>

    <string name="tab_crea_anno">Crea anno scolastico</string>
    <string name="tab_modifica_anno">Modifica anno scolastico</string>
    <string name="tab_elimina_anno">Elimina anno scolastico</string>
    <string name="tab_crea_corso">Crea corso</string>
    <string name="tab_modifica_corso">Modifica corso</string>
    <string name="tab_elimina_corso">Elimina corso</string>
    <string name="tab_crea_voto">Crea voto</string>
    <string name="tab_modifica_voto">Modifica voto</string>
    <string name="tab_elimina_voto">Elimina voto</string>
    <string name="tab_media_annuale">Media annuale</string>
    <string name="tab_corsi_annuali">Corsi annuali</string>
    <string name="tab_voti_annuali">Voti annuali</string>

    <string name="layout_btn_salva">SALVA</string>
    <string name="layout_btn_elimina">ELIMINA</string>
    <string name="layout_btn_modifica">MODIFICA</string>

    <string name="layout_msg_mv">Seleziona il corso del voto da modificare</string>
    <string name="layout_msg_mv2">Seleziona il voto da modificare</string>
    <string name="layout_msg_mv3">Modifica la data del voto selezionato</string>
    <string name="layout_msg_mv4">Modifica il punteggio del voto selezionato</string>
    <string name="layout_msg_mv5">Nota:</string>
    <string name="layout_msg_mv6">Data:</string>
    <string name="layout_msg_ev">Seleziona il corso del voto da eliminare</string>
    <string name="layout_msg_ev2">Seleziona il voto da eliminare</string>
    <string name="layout_msg_cv">Seleziona il corso in cui vuoi inserire il voto</string>
    <string name="layout_msg_cv2">Seleziona la data del voto</string>
    <string name="layout_msg_cv3">Seleziona il punteggio del voto</string>
    <string name="layout_msg_ca">Seleziona un anno scolastico da creare</string>
    <string name="layout_msg_ma">Seleziona l\'anno scolastico da modificare</string>
    <string name="layout_msg_ma2">Scegli un nuovo valore per l\'anno scolastico selezionato</string>
    <string name="layout_msg_mc">Seleziona il corso da modificare</string>
    <string name="layout_msg_ec">Seleziona il corso da rimuovere</string>
    <string name="layout_msg_mc2">Scegli un nuovo nome per il corso selezionato</string>
    <string name="layout_msg_ea">Seleziona un anno scolastico da eliminare</string>
    <string name="layout_msg_cc">Seleziona l\'anno scolastico del corso</string>
    <string name="layout_msg_cc2">Crea un nuovo corso</string>
    <string name="layout_tvl_anno_dm">MODIFICA ANNO SCOLASTICO</string>
    <string name="layout_tvl_corso_dm">MODIFICA CORSO</string>
    <string name="layout_tvl_data">DATA</string>
    <string name="layout_tvl_anno">ANNO SCOLASTICO</string>
    <string name="layout_tvl_corso">CORSO</string>
    <string name="layout_tvl_punteggio">PUNTEGGIO</string>
    <string name="layout_tvl_voto">VOTO</string>
    <string name="layout_tvl_md_voto">MODIFICA DATA VOTO</string>
    <string name="layout_tvl_md_punteggio">MODIFICA PUNTEGGIO VOTO</string>
    <string name="layout_tv_ma_mnd">DATI INSUFFICIENTI\nMEDIA NON DISPONIBILE</string>
    <string name="layout_tv_mc_mcd">DATI INSUFFICIENTI\nMEDIA DEI CORSI NON DISPONIBILE</string>
    <string name="layout_tv_lv_lvd">DATI INSUFFICIENTI\nLISTA DEI VOTI ANNUALI NON DISPONIBILE</string>

    <string name="errore_msg">"Non puoi cambiare anno scolastico\ndopo aver scelto un corso.\nPer favore ripeti la procedura"</string>
    <string name="errore_msg2">"Non puoi cambiare corso\ndopo aver scelto un voto.\nPer favore ripeti la procedura"</string>
    <string name="errore_msg3">"L'anno scolastico selezionato è gia esistente"</string>
    <string name="errore_msg4">"Non hai creato nessun anno scolastico"</string>
    <string name="errore_msg5">"Non hai creato nessun anno scolastico"</string>
    <string name="errore_msg6">"Non hai creato nessun anno scolastico"</string>
    <string name="errore_msg7">"Questo corso è gia presente nell'anno selezionato"</string>
    <string name="errore_msg8">"Non hai creato nessun anno scolastico"</string>
    <string name="errore_msg9">"L\'anno selezionato non contiene corsi"</string>
    <string name="errore_msg10">"L\'anno selezionato non contiene corsi"</string>
    <string name="errore_msg11">"Non hai creato nessun anno scolastico"</string>
    <string name="errore_msg12">"L\'anno selezionato non contiene corsi"</string>
    <string name="errore_msg13">"Il corso selezionato non contiene voti"</string>
    <string name="errore_msg14">"L\'anno selezionato non contiene corsi"</string>
    <string name="errore_msg15">"Non hai creato nessun anno scolastico"</string>
    <string name="errore_msg16">"Non hai creato nessun anno scolastico"</string>
    <string name="errore_msg17">"L\'anno selezionato non contiene corsi"</string>
    <string name="errore_msg18">"Il corso selezionato non contiene voti"</string>
    <string name="errore_msg19">"Non è possibile avere più voti con la stessa data nel medesimo corso"</string>
    <string name="errore_msg20">"Non è possibile avere più voti con la stessa data nel medesimo corso"</string>

    <string name="output_msg_ca">"Anno scolastico\ncreato correttamente"</string>
    <string name="output_msg_ma">"Anno scolastico\nmodificato correttamente"</string>
    <string name="output_msg_ea">"Anno scolastico\neliminato correttamente"</string>
    <string name="output_msg_cc">"Corso creato\ncorrettamente"</string>
    <string name="output_msg_mc">"Corso modificato\ncorrettamente"</string>
    <string name="output_msg_ec">"Corso eliminato\ncorrettamente"</string>
    <string name="output_msg_cv">"Voto creato\ncorrettamente"</string>
    <string name="output_msg_mv">"Voto modificato\ncorrettamente"</string>
    <string name="output_msg_ev">"Voto eliminato\ncorrettamente"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_selected_year">-</string>
    <string name="action_settings">Settings</string>

</resources>
